manifests-files/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: ClusterIP
  selector:
    app: dailyneeds
  ports:
    - port: 80
      targetPort: 80
