manifests-files/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  type: ClusterIP
  selector:
    app: dailyneeds
  ports:
    - port: 80
      targetPort: 80
